--- a/config/_default/markup.yaml
+++ b/config/_default/markup.yaml
@@ -1,6 +1,6 @@
 goldmark:
   renderer:
-    unsafe: false
+    unsafe: true
 tableOfContents:
   endLevel: 4
   ordered: true
@@ -13,4 +13,3 @@ highlight:
   lineNos: true
   lineNumbersInTable: true
   tabWidth: 4
-  style: 'onedark'
