--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://blog.jeremy-hibiki.xyz/
+baseURL: https://blog.hibiki.icu/
 languageCode: zh-cn
 defaultContentLanguage: zh-cn
 hasCJKLanguage: true
